syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.soc.data";

package io.soc;

import "board.proto";
import "game_data_core.proto";

service GameRecorderService {

  rpc StartRecording(StartRecordingRequest) returns (GameId);
  rpc RecordMove(RecordMoveRequest) returns (RecordMoveResponse);
  rpc CompleteRecording(CompleteRecordingRequest) returns (CompleteRecordingResponse);

  rpc GetLastRecordedMove(GetLastRecordedMoveRequest) returns (GetLastRecordedMoveResponse);
}

message StartRecordingRequest {
  map<int32, PlayerId> player_position_id_map = 1;
  BaseBoard board = 2;
}

message StartRecordingResponse {
  GameId id = 1;
  int32 initial_move_number = 2;
}

message RecordMoveRequest {
  GameId id = 1;
  MoveEvent move = 2;
  int32 previous_move_number = 3;
}

message RecordMoveResponse {
  int32 move_number = 1;
}

message CompleteRecordingRequest {
  GameId id = 1;
  int32 num_moves = 2;
}

message CompleteRecordingResponse {
  int32 move_count = 1;
}

message GetLastRecordedMoveRequest {
  GameId id = 1;
}

message GetLastRecordedMoveResponse {
  int32 move_number = 1;
  MoveEvent move = 2;
}